--- a/item2.html
+++ b/item2.html
@@ -244,7 +244,7 @@ $(function(){
 		<tr>
 			<td>
 			<!-- TODO: please fill the question picture path to 'src' attribute -->
-				<img src="image/item-2/">question.png</img>
+				<img src="image/item-2/question.png"></img>
 			</td>
 		</tr>
 		<tr>
