--- a/item2.html
+++ b/item2.html
@@ -39,20 +39,19 @@ var TEST_STAGE = {
 			[ 10, 10, "7" ]
 		],
 		// obstacle position
-		'obstacle': [
-			[5, 6]
+		
 		],
 		// box target position
 		'target': [
-			[ 0, 10, "A", "1" ],
-			[ 1, 10, "A", "1" ],
-			[ 0, 11, "B", "2" ],
-			[ 0, 14, "B", "2" ],
-			[ 1, 11, "C", "3" ],
-			[ 1, 12, "D", "4" ],
-			[ 1, 13, "E", "5" ],
-			[ 0, 15, "F", "6" ],
-			[ 0, 12, "G", "7" ]
+			[ 0, 10, "口", "1" ],
+			[ 1, 10, "口", "1" ],
+			[ 0, 11, "口", "2" ],
+			[ 0, 14, "口", "2" ],
+			[ 1, 11, "口", "3" ],
+			[ 1, 12, "口", "4" ],
+			[ 1, 13, "口", "5" ],
+			[ 0, 15, "口", "6" ],
+			[ 0, 12, "口", "7" ]
 		],
 		// player initial position
 		'player': [ 0, 0 ]
@@ -236,8 +235,8 @@ $(function(){
 		<tr>
 			<td>
 				<h3>
-					請依題目圖片所示將箱子選項推到各自對應之目標上<br/>
-					箱子：1, 2, 3...；目標：A, B, C...
+					請依題目圖片所示將箱子選項推到各自對應之位置上<br/>
+					箱子：1, 2, 3...；
 				</h3>
 			</td>
 		</tr>
